# swirly

./: Cargo.toml  LICENSE  README.md
resources/: bar.css  window.ui
src/: main.rs  util.rs
src/bar/: battery.rs  brightness.rs  mod.rs  time.rs  volume.rs  workspace.rs
src/control_panel/: brightness.rs  mod.rs  volume.rs
src/dock/: app.rs  indicator.rs  launchable.rs  mod.rs
src/workers/: battery_worker.rs  brightness_worker.rs  mod.rs  sway_executor.rs  sway_worker.rs  time_worker.rs  wayfire_worker.rs
src/workers/audio_worker/: mod.rs  poller.rs  utils.rs
